--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -60,6 +60,7 @@ export const TypographyUsage = () => `
       <th className="uqds-table__heading">Size</th>
       <th className="uqds-table__heading">Line-height</th>
       <th className="uqds-table__heading">Weight</th>
+      <th className="uqds-table__heading">Colour</th>
       <th className="uqds-table__heading">Usage</th>
     </tr>
   </thead>
@@ -70,7 +71,8 @@ export const TypographyUsage = () => `
       <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxxxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Usage example:">Page Header</td>
+      <td className="uqds-table__item" data-title="Colour:"><code>$uq-purple</code></td>
+      <td className="uqds-table__item" data-title="Usage:">Page Header</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><h2>H2 header</h2></td>
@@ -78,7 +80,8 @@ export const TypographyUsage = () => `
       <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+      <td className="uqds-table__item" data-title="Colour:"><code>$uq-purple</code></td>
+      <td className="uqds-table__item" data-title="Usage:">Header</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><h3>H3 header</h3></td>
@@ -86,7 +89,8 @@ export const TypographyUsage = () => `
       <td className="uqds-table__item" data-title="Size:"><code>$font-size-xxl</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.4</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Usage example:">Header</td>
+      <td className="uqds-table__item" data-title="Colour:"><code>$uq-purple</code></td>
+      <td className="uqds-table__item" data-title="Usage:">Header</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><p>Paragraph text</p></td>
@@ -94,7 +98,8 @@ export const TypographyUsage = () => `
       <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
-      <td className="uqds-table__item" data-title="Usage example:">deafult Text<br /> Limit line length to 70–80 characters.<br /> 
+      <td className="uqds-table__item" data-title="Colour:"><code>$text</code></td>
+      <td className="uqds-table__item" data-title="Usage:">deafult Text<br /> Limit line length to 70–80 characters.<br /> 
 Font size should be a minimum of 16px.</td>
     </tr>
     <tr className="uqds-table__row">
@@ -103,7 +108,8 @@ Font size should be a minimum of 16px.</td>
       <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Weight:">Medium, 500</td>
-      <td className="uqds-table__item" data-title="Usage example:">Text bold</td>
+      <td className="uqds-table__item" data-title="Colour:"><code>$text</code></td>
+      <td className="uqds-table__item" data-title="Usage:">Text bold</td>
     </tr>
     <tr className="uqds-table__row">
       <td className="uqds-table__item"><em>Emphasis text</em></td>
@@ -111,7 +117,8 @@ Font size should be a minimum of 16px.</td>
       <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Weight:">Regular 400</td>
-      <td className="uqds-table__item" data-title="Usage example:">Emphasis</td>
+      <td className="uqds-table__item" data-title="Colour:"><code>$text</code></td>
+      <td className="uqds-table__item" data-title="Usage:">Emphasis</td>
     </tr>
   </tbody>
 </table>
