--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -3,7 +3,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 # Card
 
-<StatusBadge.Stable />
+<StatusBadge.Development />
 
 <a href="https://github.com/uq-its-ss/design-system/issues" class="uq-button uq-button--text" target="_blank">Check for open issues</a>
 
@@ -13,104 +13,166 @@ The card component is used to provide a brief summary of content or a task, ofte
 
 ## Default example
 
-### a. Card default
+### Default card
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-default" />
+  <Story id="components-cards--default-card" />
 </Canvas>
 
 ```html
-
+<div class="card">
+  <div class="card__header"></div>
+  <div class="card__body">
+    <a class="card__link" href="#">
+      <div class="card__image-container" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg');"></div>
+    </a>
+    <div class="card__content">
+      <h2 class="card__title">
+        <a class="card__link" href="#">Title of item</a>
+      </h2>
+      <div class="card__date" tabindex="0">Sunday 16 August, 2015</div>
+      <div class="card__location">
+        <a class="card__link" href="#">Gatton campus</a>
+      </div>
+      <div class="card__summary" tabindex="0">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+      </div>
+    </div>
+  </div>
+  <div class="card__footer"></div>
+</div>
 ```
 
-### b. Card default with link
+### Default card with link
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-default-with-link" />
+  <Story id="components-cards--default-card-with-link" />
 </Canvas>
 
 ```html
-
+<div class="card">
+  <div class="card__header"></div>
+  <div class="card__body">
+    ...
+    ...
+  </div>
+  <div class="card__footer">
+    <div class="uq-grid">
+      <div class="uq-grid__col uq-grid__col--3">
+        <a class="card__link" href="#">Action link A</a>
+      </div>
+      <div class="uq-grid__col uq-grid__col--3">
+        <a class="card__link" href="#">Action link B</a>
+      </div>
+    </div>
+  </div>
+</div>
 ```
 
 ## Variant examples
 
-### a. Card square overlay title
+### Overlay card square
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-square-overlay-title" />
+  <Story id="components-cards--overlay-card-square" />
 </Canvas>
 
 ```html
-
+<a class="card__primary-link" href="https://campuses.uq.edu.au/st-lucia">
+  <div class="entity entity-paragraphs-item paragraphs-item-card-custom card--square view-mode-card_overlay card card--background-image" style="background-image: url('https://campuses.uq.edu.au/files/9492/stlucia-card.jpg')">
+    <div class="card__header"></div>
+    <div class="card__body">
+      <div class="card__content">
+        <div class="card__title">
+          <span tabindex="0">St Lucia</span>
+        </div>
+        <div class="card__summary" tabindex="0"></div>
+      </div>
+    </div>
+  </div>
+</a>
 ```
 
-### b. Card square overlay text
+### Overlay card square with additional text
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-square-overlay-text" />
+  <Story id="components-cards--overlay-card-square-with-additional-text" />
 </Canvas>
 
 ```html
-
+<div class="card card--background-image card--square" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+  <div class="card__header"></div>
+  <div class="card__body">
+    <div class="card__content">
+      <h2 class="card__title">
+        <a class="card__link" href="#">Title of item</a>
+      </h2>
+      <div class="card__date">
+        <a class="card__link" href="#">Sunday 16 August, 2015</a>
+      </div>
+      <div class="card__location">
+        <a class="card__link" href="#">Gatton campus</a>
+      </div>
+    </div>
+  </div>
+  <div class="card__footer"></div>
+</div>
 ```
 
-### c. Card square overlay link
+### Overlay card square with link
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-square-overlay-link" />
+  <Story id="components-cards--overlay-card-square-with-link" />
 </Canvas>
 
 ```html
-
+<div class="card card--background-image card--square" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+  <div class="card__header"></div>
+  <div class="card__body">
+    <div class="card__content">
+      <h2 class="card__title">
+        <a class="card__link" href="#">Title of item</a>
+      </h2>
+      <div class="card__date">
+        <a class="card__link" href="#">Sunday 16 August, 2015</a>
+      </div>
+      <div class="card__location">
+        <a class="card__link" href="#">Gatton campus</a>
+      </div>
+    </div>
+  </div>
+  <div class="card__footer">
+    <a class="card__link" href="#">Action link</a>
+  </div>
+</div>
 ```
 
-### d. Card portrait overlay
+### Overlay card portrait
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-portrait-overlay" />
+  <Story id="components-cards--overlay-card-portrait" />
 </Canvas>
 
 ```html
-
+<div class="card card--background-image card--portrait" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+  ...
+  ...
+</div>
 ```
 
-### e. Card landscape overlay
+### Overlay card landscape
 
 <Canvas withSource="none">
-  <Story id="components-cards--card-landscape-overlay" />
+  <Story id="components-cards--overlay-card-landscape" />
 </Canvas>
 
 ```html
-
+<div class="card card--background-image card--landscape" style="background-image: url('https://campuses.uq.edu.au/files/9749/gatton-card2.jpg')">
+  ...
+  ...
+</div>
 ```
 
-### f. Card horizontal
+## Accessibility
 
-<Canvas withSource="none">
-  <Story id="components-cards--card-horizontal" />
-</Canvas>
-
-```html
-
-```
-
-### g. Card horizontal shaded
-
-<Canvas withSource="none">
-  <Story id="components-cards--card-horizontal-shaded" />
-</Canvas>
-
-```html
-
-```
-
-### h. Card horizontal align media right
-
-<Canvas withSource="none">
-  <Story id="components-cards--card-horizontal-align-media-right" />
-</Canvas>
-
-```html
-
-```
+In the card component where text nodes aren't accessible via tabbing, `tabindex="0"` is added to the node.
