Tidy up title naming

--- a/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
+++ b/packages/storybook-html/src/components/side-nav/side-nav.docs.mdx
@@ -21,9 +21,9 @@ A vertical list of links for site navigation typically placed next to the body c
 <!-- Side nav single-level -->
 <div class="uq-side-nav">
 
-  <!-- Parent page title -->
+  <!-- Page title -->
   <h3 class="uq-side-nav__title">
-    <a href="#" class="uq-side-nav__title-link">Parent page title</a>
+    <a href="#" class="uq-side-nav__title-link">Page title</a>
   </h3>
 
   <!-- Side nav -->
@@ -54,9 +54,9 @@ A vertical list of links for site navigation typically placed next to the body c
 <!-- Side nav multi-level -->
 <div class="uq-side-nav">
 
-  <!-- Parent page title -->
+  <!-- Page title -->
   <h3 class="uq-side-nav__title">
-    <a href="#" class="uq-side-nav__title-link">Parent page title</a>
+    <a href="#" class="uq-side-nav__title-link">Page title</a>
   </h3>
 
   <!-- Side nav -->
