app-maps, storybook-html: search box (autopopulating search UI) part 1

--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-wayfinding-controls.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-wayfinding-controls.docs.mdx
@@ -14,7 +14,7 @@ location.
 Use the HTML markup provided in the example below to apply the styles from the
 provided CSS.
 
-<Canvas withSource="open">
+<Canvas withSource="open" withToolbar>
   <Story height={240} id="deliverables-uq-maps-wayfinding-controls--wayfinding-control" />
 </Canvas>
 
@@ -27,7 +27,7 @@ class to the container instead. We also have to add in some extra markup and
 scripted behaviour for the [*Material Design*][1] progress indicator. Please see example
 code.
 
-<Canvas withSource="open">
+<Canvas withSource="open" withToolbar>
   <Story height={240} id="deliverables-uq-maps-wayfinding-controls--wayfinding-control-working" />
 </Canvas>
 
