--- a/packages/storybook-html/src/components/accordion/accordion.docs.mdx
+++ b/packages/storybook-html/src/components/accordion/accordion.docs.mdx
@@ -9,7 +9,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ## Overview
 
-An accordion is a vertically stacked group of titles that expand or collapse associated content, helping users to see more of the content if needed.
+An accordion is a vertically stacked group of titles that on interaction expand or collapse associated content, helping users to see more of the content if needed.
 
 ## Default example
 
@@ -20,7 +20,7 @@ An accordion is a vertically stacked group of titles that expand or collapse ass
 </Canvas>
 
 ```html
-<div class="accordion" aria-label="Accordion button group" role="presentation">
+<div class="accordion" aria-label="Accordion button group">
     <div class="accordion__item">
       <button class="accordion__toggle" aria-controls="content-1" aria-expanded="false" id="accordion-title-1">Title 1</button>
       <div class="accordion__content" aria-hidden="true" id="content-1" aria-labelledby="accordion-title-1">
@@ -41,7 +41,7 @@ An accordion is a vertically stacked group of titles that expand or collapse ass
 </Canvas>
 
 ```html
-<ul class="accordion" aria-label="Accordion button group" role="presentation">
+<ul class="accordion" aria-label="Accordion button group">
     <li class="accordion__item">
       <button class="accordion__toggle" aria-controls="content-11" aria-expanded="false" id="accordion-title-11">Title 1</button>
       <div class="accordion__content" role="region" aria-hidden="true" id="content-11" aria-labelledby="accordion-title-11">
@@ -60,7 +60,7 @@ An accordion is a vertically stacked group of titles that expand or collapse ass
 </Canvas>
 
 ```html
-<div class="accordion accordion--shaded" aria-label="Accordion button group" role="presentation">
+<div class="accordion accordion--shaded" aria-label="Accordion button group">
     <div class="accordion__item">
       <button class="accordion__toggle" aria-controls="content-111" aria-expanded="false" id="accordion-title-111">Title 1</button>
       <div class="accordion__content" role="region" aria-hidden="true" id="content-111" aria-labelledby="accordion-title-111">
@@ -79,7 +79,7 @@ An accordion is a vertically stacked group of titles that expand or collapse ass
 </Canvas>
 
 ```html
-<div class="accordion accordion--secondary" aria-label="Accordion button group" role="presentation">
+<div class="accordion accordion--secondary" aria-label="Accordion button group">
     <div class="accordion__item">
       <button class="accordion__toggle" aria-controls="content-1111" aria-expanded="false" id="accordion-title-1111">Title 1</button>
       <div class="accordion__content" role="region" aria-hidden="true" id="content-1111" aria-labelledby="accordion-title-1111">
@@ -93,7 +93,7 @@ An accordion is a vertically stacked group of titles that expand or collapse ass
 
 ## How and when to use
 
-Accordions can be implemented using `div` or `<ul> <li>` lists. The default example uses divs. 
+Accordions can be implemented using `<div>` or `<ul> <li>` lists. The default example uses divs. 
 
 - Use the default accordion example if there is significant amount of content.
 - Use accordions using lists if content is less and when the semantics of a list serves better with assistive technologies like screen readers.
@@ -102,3 +102,10 @@ Accordions can be implemented using `div` or `<ul> <li>` lists. The default exam
 
 ## Accessibility
 
+- The title of each accordion item is contained in a button element.
+- If the accordion content panel associated with an accordion title is visible, the button element has aria-expanded set to true. If the content panel is not visible, aria-expanded is set to false.
+- The accordion button element has aria-controls set to the ID of the element containing the accordion content panel.
+- If the accordion content panel associated with an accordion title is visible, and if the accordion does not permit the content panel to be collapsed, the button element has aria-disabled set to true.
+- Optionally, each element that serves as a container for panel content has `role="region"` and `aria-labelledby` with a value that refers to the button that controls display of the panel.
+  - Avoid using role region in circumstances that create landmark region proliferation, e.g., in an accordion that contains more than approximately 6 panels that can be expanded at the same time.
+  - Role region is especially helpful to the perception of structure by screen reader users when panels contain heading elements or a nested accordion.
