--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -151,10 +151,10 @@ The card component is used to provide a brief summary of content or a task, ofte
 </div>
 ```
 
-### Overlay card square with link
+### Overlay card with link
 
 <Canvas withSource="none">
-  <Story id="components-cards--overlay-card-square-with-link" />
+  <Story id="components-cards--overlay-card-with-link" />
 </Canvas>
 
 ```html
@@ -167,10 +167,10 @@ The card component is used to provide a brief summary of content or a task, ofte
 </div>
 ```
 
-### Overlay card square with additional text
+### Overlay card with additional text
 
 <Canvas withSource="none">
-  <Story id="components-cards--overlay-card-square-with-additional-text" />
+  <Story id="components-cards--overlay-card-with-additional-text" />
 </Canvas>
 
 ```html
