--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -26,11 +26,11 @@ export const FontUsage = () => `
     </tr>
     <tr>
       <td>Merriweather</td>
-      <td>Merriweather can be used for pull out quotes and to break up long headings. <strong>not to be used for body text</strong>.</td>
+      <td>Merriweather can be used for pull out quotes and to break up long headings. <strong>Not to be used for body text</strong>.</td>
     </tr>
     <tr>
       <td>Montserrat</td>
-      <td>Montserrat is used for the main page (banner) heading. <strong>not to be used for body text</strong>.</td>
+      <td>Montserrat is used for the main page (banner) heading. <strong>Not to be used for body text</strong>.</td>
     </tr>
     <tr>
       <td>Monospace</td>
@@ -47,7 +47,7 @@ export const FontUsage = () => `
 - Use sentence case/minimal capitalisation in headings and subheadings. Use a capital for the first letter of the first word, with subsequent words in lower case.
 - All-caps text — meaning text with all the letters capitalised — is best used sparingly.
 - Reference the offical [Written style guide](https://marketing-communication.uq.edu.au/written-style-guide) for detailed instructions for writing content.  
-- Ellipsis, use the Ellipsis to indicate incompletenes. Truncated text.
+- Ellipsis, use the Ellipsis to indicate incompleteness. Truncated text.
 
 ## Default typography
 
@@ -229,7 +229,7 @@ export const InlineElements = () => `
     </tr>
     <tr>
       <td><strong>Strong text</strong></td>
-      <td><coded>&lt;strong&gt;&lt;/strong&gt;</code></td>
+      <td><coded>&lt;strong&gt;&lt;/strong&gt;</code></td
       <td>Indicates that its contents have strong importance, seriousness, or urgency.</td>
     </tr>
     <tr>
