--- a/packages/storybook-html/src/components/core/typography-applying.story.mdx
+++ b/packages/storybook-html/src/components/core/typography-applying.story.mdx
@@ -99,11 +99,11 @@ export const TypographyUsage = () => `
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
       <td className="uqds-table__item" data-title="Weight:">Regular, 400</td>
       <td className="uqds-table__item" data-title="Colour:"><code>$text</code></td>
-      <td className="uqds-table__item" data-title="Usage:">deafult Text<br /> Limit line length to 70–80 characters.<br /> 
+      <td className="uqds-table__item" data-title="Usage:">Deafult text<br /> Limit line length to 70–80 characters.<br /> 
 Font size should be a minimum of 16px.</td>
     </tr>
     <tr className="uqds-table__row">
-      <td className="uqds-table__item"><strong>Strong Text</strong></td>
+      <td className="uqds-table__item"><strong>Strong text</strong></td>
       <td className="uqds-table__item" data-title="Font:">Roboto</td>
       <td className="uqds-table__item" data-title="Size:"><code>$font-size-m</code></td>
       <td className="uqds-table__item" data-title="Line-height:">1.5</td>
@@ -144,7 +144,7 @@ export const ExampleType = () => `
 
 ## Inline text elements
 
-Use the HTML inline text Elements to define the meaning, structure, or style of a word, line, or any arbitrary piece of text.
+Use the HTML inline text elements to define the meaning, structure, or style of a word, line, or any arbitrary piece of text.
 Reference: [MDN HTML elements reference](https://developer.mozilla.org/en-US/docs/Web/HTML/Element)
 
 export const InlineElements = () => `
