--- a/packages/storybook-html/src/components/core/typography.story.mdx
+++ b/packages/storybook-html/src/components/core/typography.story.mdx
@@ -23,7 +23,7 @@ export const Fonts = () => `
 
 > ***Print font usage*** Please refer to the [Print brand guidelines](https://marketing-communication.uq.edu.au/) for offline "Print" font applications.
 
-> While ***Gotham is our primary brand font***, We use alternative fonts online due to the costs to licence for websites and application and a lack of robust embedded versions. 
+> While ***Gotham is our primary brand font***, we use alternative fonts online due to the costs to licence for websites and application and a lack of robust embedded versions. 
 
 ## Styles
 
