Deprecated ones marked

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -113,7 +113,7 @@ Additional text can also be added to cards. this includes <code>card-date</code>
 </div>
 ```
 
-### Overlay card square
+### Overlay card square _(deprecated)_
 
 Square cards are more compact and ,  
 Add the class <code>card--square</code> to the Card wrapper. 
@@ -136,7 +136,7 @@ Add the class <code>card--square</code> to the Card wrapper.
 </a>
 ```
 
-### Overlay card portrait
+### Overlay card portrait _(deprecated)_
 
 Allow more vertical coverage for greater image impact. <code>card--portrait</code>
 
@@ -151,7 +151,7 @@ Allow more vertical coverage for greater image impact. <code>card--portrait</cod
 </div>
 ```
 
-### Overlay card landscape
+### Overlay card landscape _(deprecated)_
 
 Allow more horizontal coverage for greater image impact. <code>card--landscape</code>
 The width does restrict the number of cards that can be displayed in the same row. 
@@ -167,7 +167,7 @@ The width does restrict the number of cards that can be displayed in the same ro
 </div>
 ```
 
-### Overlay card with link
+### Overlay card with link _(deprecated)_
 
 Add an action link to change point of interaction. 
 
@@ -185,7 +185,7 @@ Add an action link to change point of interaction.
 </div>
 ```
 
-### Overlay card with additional text
+### Overlay card with additional text _(deprecated)_
 
 Additional text can also be added to cards. this includes <code>card-date</code> and <code>card-location</code>
 
