app-maps, storybook-html: slide drawer component, app-maps build script
Also some accessibility fixes

--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-wayfinding-controls.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-wayfinding-controls.docs.mdx
@@ -6,7 +6,7 @@ import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
 ## Initial state
 
-What the wayfinding panel looks like when a use chooses to navigate to a
+What the wayfinding panel looks like when a user chooses to navigate to a
 location.
 
 ### Basic usage
