--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-icons.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-icons.docs.mdx
@@ -1,5 +1,9 @@
-# Icons
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import StatusBadge from '../../../.storybook/custom/components/StatusBadge';
 
-[Figma project][1]
+# Icons
+<StatusBadge.Development />
+
+These docs haven't been written yet. In the meantime, refer to the [🔒 Figma project][1].
 
 [1]: https://www.figma.com/file/MKgUvdM8E2jOwF80Qwg8Ha/UQ-Maps-Icon-Export?node-id=0%3A1
