--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-search-combo.docs.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-search-combo.docs.mdx
@@ -33,17 +33,6 @@ text. The following example shows an alphabetical list of categories.
   <Story height={800} id="deliverables-uq-maps-search-combo-menu--focused" />
 </Canvas>
 
-<div class="alert alert--warning" role="alert">
-  <div class="alert__message">
-    Note: <strong>there's currently no reliable way to make the search field
-    "sticky"</strong> (remain at the top even when scrolling)—with the first
-    search result initially positioned relative to the search field's
-    height—<strong>using CSS and HTML alone</strong>. Implement a JavaScript
-    solution to this problem to improve the user experience. Watch this space
-    for a working demo.
-  </div>
-</div>
-
 ## With search value
 
 ### Basic usage
@@ -79,3 +68,18 @@ list items.
 <Canvas withSource="open" withToolbar>
   <Story height={800} id="deliverables-uq-maps-search-combo-menu--searching-in-category" />
 </Canvas>
+
+## JavaScript UX enhancements
+
+### Sticky search field
+
+<div class="alert alert--warning" role="alert">
+  <div class="alert__message">
+    Note: <strong>there's currently no reliable way to make the search field
+    "sticky"</strong> (remain at the top even when scrolling)—with the first
+    search result initially positioned relative to the search field's
+    height—<strong>using CSS and HTML alone</strong>. Implement a JavaScript
+    solution to this problem to improve the user experience. Watch this space
+    for a working demo.
+  </div>
+</div>
