--- a/packages/storybook-html/src/deliverables/uq-maps/uq-maps-intro.story.mdx
+++ b/packages/storybook-html/src/deliverables/uq-maps/uq-maps-intro.story.mdx
@@ -22,8 +22,9 @@ These are temporary installation & usage instructions; intended only for the
    > Downloads restricted to ITS-ADS staff only.
 2. (Optional) Add the package as a JavaScript module dependency into your
    project. Unfortunately, it's not as simple as running `npm i @uqds/app-maps`
-   *yet*.  
-   [TODO: package.json instructions here...]
+   *yet*. **Required if you want to use the Sass files. Please also note the
+   `@uqds` scope in the package name.**  
+   [TODO: instructions here...]
 
 ## Using HTML templates
 
@@ -71,9 +72,9 @@ request access.
 
 [🔒 Icon design file (Figma)][2]
 
-[1]: #
+[1]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/app-maps-1.0.0.tgz
 [2]: https://www.figma.com/file/MKgUvdM8E2jOwF80Qwg8Ha/UQ-Maps-Icon-Export?node-id=0%3A1
 [3]: /?path=/docs/deliverables-uq-maps-icons--ui
 [4]: https://sass-lang.com/dart-sass
-[5]: #
-[6]: #
+[5]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/core-1.0.0.tgz
+[6]: https://uq.sharepoint.com/teams/LmD6Nzqn/Shared%20Documents/Team%20Aqua/Applications/Uq%20Maps/Code/body-1.0.0.tgz
