FS Card default, variants & bordered added

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -212,3 +212,23 @@ Additional text can also be added to cards. this includes <code>card-date</code>
   ...
 </div>
 ```
+
+### FS card default
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-default" />
+</Canvas>
+
+```html
+
+```
+
+### FS card bordered
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-bordered" />
+</Canvas>
+
+```html
+
+```
