card horizontal added, accessibility added

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -232,3 +232,23 @@ Additional text can also be added to cards. this includes <code>card-date</code>
 ```html
 
 ```
+
+### FS card horizontal left
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-horizontal-left" />
+</Canvas>
+
+```html
+
+```
+
+### FS card horizontal right
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-horizontal-right" />
+</Canvas>
+
+```html
+
+```
