Additional variants added

--- a/packages/storybook-html/src/components/card/card.docs.mdx
+++ b/packages/storybook-html/src/components/card/card.docs.mdx
@@ -223,6 +223,36 @@ Additional text can also be added to cards. this includes <code>card-date</code>
 
 ```
 
+### FS card text link
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-text-link" />
+</Canvas>
+
+```html
+
+```
+
+### FS card no image
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-no-image" />
+</Canvas>
+
+```html
+
+```
+
+### FS card no image shaded
+
+<Canvas withSource="none">
+  <Story id="components-cards--fs-card-no-image-shaded" />
+</Canvas>
+
+```html
+
+```
+
 ### FS card bordered
 
 <Canvas withSource="none">
